# business_card_ocr

./: README.md  ocr_app.py  ocr_app.py.old  pyproject.toml
business_card_ocr/: enhanced_address_extraction.py  extraction.py  preprocessing.py  utils.py
data/: address_dataset.csv  alamat_usaha.csv
input/: IMG_7799.HEIC  data-usaha-jasa-makanan-dan-minuman-jenis-usaha-restoran-di-dki-jakarta-tahun-2014.csv
models/: trained_model.pkl  vectorizer.pkl
scripts/: generate_address_dataset.md  generate_address_dataset.py  scrape_address_from_csv.py  train_address_model.md  train_address_model.py  train_address_model_test.py
